menambahkan kalender kunjungan setiap potik

--- a/potik.html
+++ b/potik.html
@@ -90,6 +90,24 @@
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQZ02Et4iOwEYY31RMRnIItg_uqDBxR5cX7ZARn4Sw5fAiLDSxZUBbO8P9Jzc_RXEtPtSajNk8VdtGU/pubhtml?gid=1336181525&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="600"></iframe>
                 <br>
                 <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQZ02Et4iOwEYY31RMRnIItg_uqDBxR5cX7ZARn4Sw5fAiLDSxZUBbO8P9Jzc_RXEtPtSajNk8VdtGU/pubhtml?gid=1336181525&single=true" target="_blank">Selengkapnya</a>
+                <hr>
+                <div class="accordion" id="accordionTab1">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading1Tab1">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab1" aria-expanded="false" aria-controls="collapse1Tab1">
+                                Pengunjung Harian
+                            </button>
+                        </h2>
+                        <div id="collapse1Tab1" class="accordion-collapse collapse" aria-labelledby="heading1Tab1" data-bs-parent="#accordionTab1">
+                            <div class="accordion-body">
+                                <br>
+                                <p>
+                                    <img src="potik/kunjungan-ipb.png" width="100%" height="auto"/>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- Indikator 2 -->
@@ -99,6 +117,24 @@
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQZ02Et4iOwEYY31RMRnIItg_uqDBxR5cX7ZARn4Sw5fAiLDSxZUBbO8P9Jzc_RXEtPtSajNk8VdtGU/pubhtml?gid=1771928319&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="600"></iframe>
                 <br>
                 <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQZ02Et4iOwEYY31RMRnIItg_uqDBxR5cX7ZARn4Sw5fAiLDSxZUBbO8P9Jzc_RXEtPtSajNk8VdtGU/pubhtml?gid=1771928319&single=true" target="_blank">Selengkapnya</a>
+                <hr>
+                <div class="accordion" id="accordionTab2">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading1Tab2">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab2" aria-expanded="false" aria-controls="collapse1Tab2">
+                                Pengunjung Harian
+                            </button>
+                        </h2>
+                        <div id="collapse1Tab2" class="accordion-collapse collapse" aria-labelledby="heading1Tab2" data-bs-parent="#accordionTab2">
+                            <div class="accordion-body">
+                                <br>
+                                <p>
+                                    <img src="potik/kunjungan-ui.png" width="100%" height="auto"/>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- Indikator 3 -->
@@ -108,6 +144,24 @@
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQZ02Et4iOwEYY31RMRnIItg_uqDBxR5cX7ZARn4Sw5fAiLDSxZUBbO8P9Jzc_RXEtPtSajNk8VdtGU/pubhtml?gid=2058848688&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="600"></iframe>
                 <br>
                 <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQZ02Et4iOwEYY31RMRnIItg_uqDBxR5cX7ZARn4Sw5fAiLDSxZUBbO8P9Jzc_RXEtPtSajNk8VdtGU/pubhtml?gid=2058848688&single=true" target="_blank">Selengkapnya</a>
+                <hr>
+                <div class="accordion" id="accordionTab3">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading1Tab3">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab3" aria-expanded="false" aria-controls="collapse1Tab3">
+                                Pengunjung Harian
+                            </button>
+                        </h2>
+                        <div id="collapse1Tab3" class="accordion-collapse collapse" aria-labelledby="heading1Tab3" data-bs-parent="#accordionTab3">
+                            <div class="accordion-body">
+                                <br>
+                                <p>
+                                    <img src="potik/kunjungan-unisba.png" width="100%" height="auto"/>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- Indikator 4 -->
@@ -117,6 +171,24 @@
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQZ02Et4iOwEYY31RMRnIItg_uqDBxR5cX7ZARn4Sw5fAiLDSxZUBbO8P9Jzc_RXEtPtSajNk8VdtGU/pubhtml?gid=1095373757&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="600"></iframe>
                 <br>
                 <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQZ02Et4iOwEYY31RMRnIItg_uqDBxR5cX7ZARn4Sw5fAiLDSxZUBbO8P9Jzc_RXEtPtSajNk8VdtGU/pubhtml?gid=1095373757&single=true" target="_blank">Selengkapnya</a>
+                <hr>
+                <div class="accordion" id="accordionTab4">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading1Tab4">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab4" aria-expanded="false" aria-controls="collapse1Tab4">
+                                Pengunjung Harian
+                            </button>
+                        </h2>
+                        <div id="collapse1Tab4" class="accordion-collapse collapse" aria-labelledby="heading1Tab4" data-bs-parent="#accordionTab4">
+                            <div class="accordion-body">
+                                <br>
+                                <p>
+                                    <img src="potik/kunjungan-unpad.png" width="100%" height="auto"/>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <!-- MATERI -->
@@ -126,6 +198,24 @@
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQZ02Et4iOwEYY31RMRnIItg_uqDBxR5cX7ZARn4Sw5fAiLDSxZUBbO8P9Jzc_RXEtPtSajNk8VdtGU/pubhtml?gid=591599713&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="600"></iframe>
                 <br>    
                 <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQZ02Et4iOwEYY31RMRnIItg_uqDBxR5cX7ZARn4Sw5fAiLDSxZUBbO8P9Jzc_RXEtPtSajNk8VdtGU/pubhtml?gid=591599713&single=true" target="_blank">Selengkapnya</a>
+                <hr>
+                <div class="accordion" id="accordionTab5">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading1Tab5">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab5" aria-expanded="false" aria-controls="collapse1Tab5">
+                                Pengunjung Harian
+                            </button>
+                        </h2>
+                        <div id="collapse1Tab5" class="accordion-collapse collapse" aria-labelledby="heading1Tab5" data-bs-parent="#accordionTab5">
+                            <div class="accordion-body">
+                                <br>
+                                <p>
+                                    <img src="potik/kunjungan-unpar.png" width="100%" height="auto"/>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="tab-pane fade" id="tab6" role="tabpanel" aria-labelledby="tab6-tab">
@@ -134,6 +224,24 @@
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQZ02Et4iOwEYY31RMRnIItg_uqDBxR5cX7ZARn4Sw5fAiLDSxZUBbO8P9Jzc_RXEtPtSajNk8VdtGU/pubhtml?gid=1758737792&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="600"></iframe>
                 <br>    
                 <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQZ02Et4iOwEYY31RMRnIItg_uqDBxR5cX7ZARn4Sw5fAiLDSxZUBbO8P9Jzc_RXEtPtSajNk8VdtGU/pubhtml?gid=1758737792&single=true" target="_blank">Selengkapnya</a>
+                <hr>
+                <div class="accordion" id="accordionTab6">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading1Tab6">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab6" aria-expanded="false" aria-controls="collapse1Tab6">
+                                Pengunjung Harian
+                            </button>
+                        </h2>
+                        <div id="collapse1Tab6" class="accordion-collapse collapse" aria-labelledby="heading1Tab6" data-bs-parent="#accordionTab6">
+                            <div class="accordion-body">
+                                <br>
+                                <p>
+                                    <img src="potik/kunjungan-unsil.png" width="100%" height="auto"/>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="tab-pane fade" id="tab7" role="tabpanel" aria-labelledby="tab7-tab">
@@ -142,6 +250,24 @@
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQZ02Et4iOwEYY31RMRnIItg_uqDBxR5cX7ZARn4Sw5fAiLDSxZUBbO8P9Jzc_RXEtPtSajNk8VdtGU/pubhtml?gid=2103667722&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="600"></iframe>
                 <br>    
                 <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQZ02Et4iOwEYY31RMRnIItg_uqDBxR5cX7ZARn4Sw5fAiLDSxZUBbO8P9Jzc_RXEtPtSajNk8VdtGU/pubhtml?gid=2103667722&single=true" target="_blank">Selengkapnya</a>
+                <hr>
+                <div class="accordion" id="accordionTab7">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="heading1Tab7">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1Tab7" aria-expanded="false" aria-controls="collapse1Tab7">
+                                Pengunjung Harian
+                            </button>
+                        </h2>
+                        <div id="collapse1Tab7" class="accordion-collapse collapse" aria-labelledby="heading1Tab7" data-bs-parent="#accordionTab7">
+                            <div class="accordion-body">
+                                <br>
+                                <p>
+                                    <img src="potik/kunjungan-upb.png" width="100%" height="auto"/>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
