--- a/pss.html
+++ b/pss.html
@@ -46,9 +46,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="pst.html">PST</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="potik.html">Potik</a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -320,6 +317,8 @@
                     <p>
                         <a href="https://drive.google.com/file/d/1MXduD16UdSjHK9zCU_GloQ1bnSaawi4u/view?usp=sharing" target="_blank">Baca Modul Lengkap</a>
                     </p>
+                <br>
+                <iframe src="https://drive.google.com/file/d/1UCpJzgNCMJwCUKbic2pAdbmpijQRdFwc/preview" width="100%" height="480" allow="autoplay"></iframe>
             </div>
 
             <!-- Domain 3 Probis -->
@@ -636,6 +635,8 @@
                     <p>
                         <a href="https://drive.google.com/file/d/1e8eTnj2jA968pUJy1_cNyh9cKSMoCJDk/view?usp=sharing" target="_blank">Baca Modul Lengkap</a>
                     </p>
+                <br>
+                <iframe src="https://drive.google.com/file/d/1B7P1Ly1HfMMMYK_KzHcgDsaP6knCJVKc/preview" width="100%" height="auto" allow="autoplay"></iframe>
             </div>
 
             <!-- Domain 5 SSN -->
