--- a/pekppp.html
+++ b/pekppp.html
@@ -67,7 +67,7 @@
                     <b>Pelayanan publik</b> adalah kegiatan atau rangkaian kegiatan dalam rangka pemenuhan kebutuhan pelayanan sesuai dengan ketentuan perundang-undangan bagi setiap warga negara dan penduduk atas barang, jasa dan/atau pelayanan administratif yang disediakan oleh penyelenggara pelayanan publik.
                 </p>
                 <p>
-                    <strong><a href="https://drive.google.com/file/d/1StspX3MXeFqyykN6N_qLxCn2TvChw51D/view?usp=sharing" target="_blank">Baca Pedoman</a></strong>
+                    <strong><a href="https://drive.google.com/file/d/1hrzg-D4ZM7Q3cZGd_7UlKDmmCjV3frzS/view?usp=drive_link" target="_blank">Baca Pedoman MenPAN-RB</a></strong>
                 </p>
             </div>
         </div>
